--- a/hairista/Controller/Booking/BookingViewController.xib
+++ b/hairista/Controller/Booking/BookingViewController.xib
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -29,7 +28,6 @@
                 <outlet property="lblTitle" destination="weO-22-ABg" id="0BZ-f5-nzP"/>
                 <outlet property="lbltotalPrice" destination="aQT-Yb-xtV" id="w00-s4-H9W"/>
                 <outlet property="tblService" destination="NPd-6M-xkG" id="t2e-Xl-jar"/>
-                <outlet property="txtFullName" destination="IkG-Bh-5ez" id="L1T-jG-FY5"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -108,10 +106,10 @@
                     <rect key="frame" x="0.0" y="72" width="320" height="496"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dgq-67-NkW">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="335"/>
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="290"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thời gian" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ivY-Hv-u7K">
-                                    <rect key="frame" x="12" y="73" width="79" height="21"/>
+                                    <rect key="frame" x="12" y="26" width="79" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="21" id="TaE-nt-mri"/>
                                         <constraint firstAttribute="width" constant="79" id="xFs-ei-MMU"/>
@@ -121,21 +119,21 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vvA-Wr-JC7" customClass="NCComboboxNewView">
-                                    <rect key="frame" x="95" y="65" width="213" height="37"/>
+                                    <rect key="frame" x="95" y="20" width="213" height="37"/>
                                     <color key="backgroundColor" red="0.0" green="0.44705882349999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="37" id="BTY-UM-j2U"/>
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3EY-Hl-BVa" customClass="NCComboboxNewView">
-                                    <rect key="frame" x="93" y="110" width="215" height="37"/>
+                                    <rect key="frame" x="93" y="65" width="215" height="37"/>
                                     <color key="backgroundColor" red="0.0" green="0.44705882349999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="37" id="miL-jj-EMc"/>
                                     </constraints>
                                 </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tổng chi phí : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kkK-12-od3">
-                                    <rect key="frame" x="12" y="209" width="97" height="21"/>
+                                    <rect key="frame" x="12" y="164" width="97" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="97" id="16f-SU-rwb"/>
                                         <constraint firstAttribute="height" constant="21" id="zyg-6i-MVk"/>
@@ -144,17 +142,17 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 VNĐ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aQT-Yb-xtV">
-                                    <rect key="frame" x="112" y="209" width="196" height="21"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 đ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aQT-Yb-xtV">
+                                    <rect key="frame" x="112" y="164" width="196" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="21" id="2kS-e6-IUp"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="18"/>
-                                    <color key="textColor" red="0.0" green="0.44705882349999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="textColor" red="1" green="0.31328328700000002" blue="0.16705806510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xB2-3K-ham">
-                                    <rect key="frame" x="12" y="255" width="296" height="50"/>
+                                    <rect key="frame" x="12" y="210" width="296" height="50"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="50" id="t9L-2G-h9F"/>
@@ -167,25 +165,8 @@
                                         <action selector="create:" destination="-1" eventType="touchUpInside" id="CpC-UW-kuJ"/>
                                     </connections>
                                 </button>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Họ và tên" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kxn-JU-D5e">
-                                    <rect key="frame" x="12" y="28" width="79" height="21"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="21" id="Odd-WE-dff"/>
-                                        <constraint firstAttribute="width" constant="79" id="Xke-Uw-lv7"/>
-                                    </constraints>
-                                    <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IkG-Bh-5ez" customClass="NCTextFieldView">
-                                    <rect key="frame" x="95" y="20" width="213" height="37"/>
-                                    <color key="backgroundColor" red="1" green="0.83586316520000004" blue="0.12246893609999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="37" id="veZ-Ng-DiP"/>
-                                    </constraints>
-                                </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dịch vụ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vCW-X1-2gA">
-                                    <rect key="frame" x="12" y="117" width="79" height="21"/>
+                                    <rect key="frame" x="12" y="70" width="79" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="79" id="IXA-t1-Jd5"/>
                                         <constraint firstAttribute="height" constant="21" id="WPp-fJ-zH9"/>
@@ -195,7 +176,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NPd-6M-xkG">
-                                    <rect key="frame" x="12" y="147" width="296" height="62"/>
+                                    <rect key="frame" x="12" y="102" width="296" height="62"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="62" id="1im-Zt-938"/>
@@ -212,27 +193,21 @@
                                 <constraint firstItem="3EY-Hl-BVa" firstAttribute="top" secondItem="vvA-Wr-JC7" secondAttribute="bottom" constant="8" id="1x3-Xc-fgM"/>
                                 <constraint firstItem="3EY-Hl-BVa" firstAttribute="leading" secondItem="vCW-X1-2gA" secondAttribute="trailing" constant="2" id="3DJ-Rs-zRY"/>
                                 <constraint firstItem="vCW-X1-2gA" firstAttribute="leading" secondItem="dgq-67-NkW" secondAttribute="leading" constant="12" id="6Ol-79-ikN"/>
-                                <constraint firstItem="IkG-Bh-5ez" firstAttribute="leading" secondItem="kxn-JU-D5e" secondAttribute="trailing" constant="4" id="7R0-fZ-OpW"/>
                                 <constraint firstItem="aQT-Yb-xtV" firstAttribute="leading" secondItem="kkK-12-od3" secondAttribute="trailing" constant="3" id="BrF-0f-FA5"/>
                                 <constraint firstItem="aQT-Yb-xtV" firstAttribute="top" secondItem="NPd-6M-xkG" secondAttribute="bottom" id="Cud-d6-u40"/>
                                 <constraint firstItem="vvA-Wr-JC7" firstAttribute="leading" secondItem="ivY-Hv-u7K" secondAttribute="trailing" constant="4" id="DG5-xC-dYz"/>
-                                <constraint firstItem="IkG-Bh-5ez" firstAttribute="top" secondItem="dgq-67-NkW" secondAttribute="top" constant="20" id="FR8-Yt-dlA"/>
                                 <constraint firstItem="kkK-12-od3" firstAttribute="top" secondItem="NPd-6M-xkG" secondAttribute="bottom" id="Gdj-be-VF6"/>
                                 <constraint firstItem="NPd-6M-xkG" firstAttribute="top" secondItem="3EY-Hl-BVa" secondAttribute="bottom" id="Ggf-i1-66h"/>
                                 <constraint firstAttribute="trailing" secondItem="3EY-Hl-BVa" secondAttribute="trailing" constant="12" id="HwJ-BK-OoQ"/>
-                                <constraint firstItem="vvA-Wr-JC7" firstAttribute="top" secondItem="IkG-Bh-5ez" secondAttribute="bottom" constant="8" id="Iuf-uz-0si"/>
-                                <constraint firstItem="kxn-JU-D5e" firstAttribute="top" secondItem="dgq-67-NkW" secondAttribute="top" constant="28" id="KP5-AV-fgb"/>
                                 <constraint firstAttribute="trailing" secondItem="aQT-Yb-xtV" secondAttribute="trailing" constant="12" id="L2f-DD-8vb"/>
+                                <constraint firstItem="ivY-Hv-u7K" firstAttribute="top" secondItem="dgq-67-NkW" secondAttribute="top" constant="26" id="O0K-op-hNy"/>
+                                <constraint firstItem="vvA-Wr-JC7" firstAttribute="top" secondItem="dgq-67-NkW" secondAttribute="top" constant="20" id="PUz-IJ-7ux"/>
                                 <constraint firstItem="xB2-3K-ham" firstAttribute="top" secondItem="aQT-Yb-xtV" secondAttribute="bottom" constant="25" id="Pi7-To-ntY"/>
-                                <constraint firstItem="IkG-Bh-5ez" firstAttribute="leading" secondItem="kxn-JU-D5e" secondAttribute="trailing" constant="4" id="RIo-30-ago"/>
-                                <constraint firstItem="ivY-Hv-u7K" firstAttribute="top" secondItem="kxn-JU-D5e" secondAttribute="bottom" constant="24" id="WXR-pQ-9kL"/>
                                 <constraint firstItem="xB2-3K-ham" firstAttribute="leading" secondItem="dgq-67-NkW" secondAttribute="leading" constant="12" id="bP5-ob-k7n"/>
                                 <constraint firstItem="NPd-6M-xkG" firstAttribute="leading" secondItem="dgq-67-NkW" secondAttribute="leading" constant="12" id="dcS-u6-hic"/>
                                 <constraint firstItem="ivY-Hv-u7K" firstAttribute="leading" secondItem="dgq-67-NkW" secondAttribute="leading" constant="12" id="e38-yE-krV"/>
                                 <constraint firstAttribute="trailing" secondItem="xB2-3K-ham" secondAttribute="trailing" constant="12" id="iAN-52-qEw"/>
                                 <constraint firstItem="kkK-12-od3" firstAttribute="leading" secondItem="dgq-67-NkW" secondAttribute="leading" constant="12" id="jEW-P9-lDF"/>
-                                <constraint firstItem="kxn-JU-D5e" firstAttribute="leading" secondItem="dgq-67-NkW" secondAttribute="leading" constant="12" id="kJC-eV-XoQ"/>
-                                <constraint firstAttribute="trailing" secondItem="IkG-Bh-5ez" secondAttribute="trailing" constant="12" id="me4-5l-Hig"/>
                                 <constraint firstItem="aQT-Yb-xtV" firstAttribute="leading" secondItem="kkK-12-od3" secondAttribute="trailing" constant="3" id="oWQ-1l-32V"/>
                                 <constraint firstItem="vCW-X1-2gA" firstAttribute="top" secondItem="ivY-Hv-u7K" secondAttribute="bottom" constant="23" id="sBE-Ta-OvE"/>
                                 <constraint firstAttribute="trailing" secondItem="vvA-Wr-JC7" secondAttribute="trailing" constant="12" id="uJj-Hb-K2i"/>
