--- a/hairista/Controller/DetailSalon/SalonDetail/ChooseImageView/ChooseImageView.xib
+++ b/hairista/Controller/DetailSalon/SalonDetail/ChooseImageView/ChooseImageView.xib
@@ -16,6 +16,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ChooseImageView">
             <connections>
                 <outlet property="imgView" destination="0nP-5T-gYu" id="uV9-7w-MfG"/>
+                <outlet property="tfImageName" destination="ASz-ZY-PUv" id="2kb-Rl-QYN"/>
                 <outlet property="view" destination="iN0-l3-epB" id="J8G-12-GlE"/>
             </connections>
         </placeholder>
@@ -25,20 +26,20 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0nP-5T-gYu">
-                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="589"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rN8-kA-XpL">
                     <rect key="frame" x="0.0" y="617" width="375" height="50"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e7k-hm-yss">
-                            <rect key="frame" x="259" y="10" width="101" height="30"/>
+                            <rect key="frame" x="305" y="10" width="55" height="30"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="101" id="Slc-zv-eWY"/>
+                                <constraint firstAttribute="width" constant="55" id="Slc-zv-eWY"/>
                                 <constraint firstAttribute="height" constant="30" id="ePA-lA-liu"/>
                             </constraints>
-                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="11"/>
-                            <state key="normal" title="Chia sẻ lên Salon">
+                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
+                            <state key="normal" title="Chia sẻ">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <userDefinedRuntimeAttributes>
@@ -51,14 +52,14 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aiU-JQ-PYJ">
-                            <rect key="frame" x="14" y="10" width="101" height="30"/>
+                            <rect key="frame" x="14" y="10" width="57" height="30"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="101" id="1Fp-9S-5x9"/>
+                                <constraint firstAttribute="width" constant="57" id="1Fp-9S-5x9"/>
                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="AsK-Nx-8CM"/>
                                 <constraint firstAttribute="height" constant="30" id="mjj-cj-Hzi"/>
                             </constraints>
-                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="11"/>
+                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                             <state key="normal" title="Trở về">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -71,21 +72,33 @@
                                 <action selector="touchBtnBack:" destination="-1" eventType="touchUpInside" id="BvY-Qz-nSY"/>
                             </connections>
                         </button>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nhập tên hình ảnh" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ASz-ZY-PUv">
+                            <rect key="frame" x="87" y="10" width="202" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="uAO-w4-OYf"/>
+                            </constraints>
+                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.30075374119718312" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="0ma-fC-5Ns"/>
+                        <constraint firstAttribute="bottom" secondItem="ASz-ZY-PUv" secondAttribute="bottom" constant="10" id="LmB-JZ-lyL"/>
                         <constraint firstAttribute="trailing" secondItem="e7k-hm-yss" secondAttribute="trailing" constant="15" id="Lnf-Q4-uq8"/>
+                        <constraint firstItem="ASz-ZY-PUv" firstAttribute="leading" secondItem="aiU-JQ-PYJ" secondAttribute="trailing" constant="16" id="Ok6-Zs-RR5"/>
                         <constraint firstItem="aiU-JQ-PYJ" firstAttribute="leading" secondItem="rN8-kA-XpL" secondAttribute="leading" constant="14" id="UA4-mQ-y9n"/>
                         <constraint firstItem="e7k-hm-yss" firstAttribute="centerY" secondItem="rN8-kA-XpL" secondAttribute="centerY" id="ZMD-0P-uXN"/>
                         <constraint firstItem="aiU-JQ-PYJ" firstAttribute="centerY" secondItem="rN8-kA-XpL" secondAttribute="centerY" id="fsf-nO-ptL"/>
+                        <constraint firstItem="e7k-hm-yss" firstAttribute="leading" secondItem="ASz-ZY-PUv" secondAttribute="trailing" constant="16" id="q0y-Vn-h9z"/>
                     </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="0nP-5T-gYu" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="IQd-gt-5Vl"/>
-                <constraint firstAttribute="bottom" secondItem="0nP-5T-gYu" secondAttribute="bottom" id="KjP-ne-M5b"/>
+                <constraint firstAttribute="bottom" secondItem="0nP-5T-gYu" secondAttribute="bottom" constant="58" id="KjP-ne-M5b"/>
                 <constraint firstAttribute="trailing" secondItem="rN8-kA-XpL" secondAttribute="trailing" id="Pax-Qt-mJv"/>
                 <constraint firstAttribute="trailing" secondItem="0nP-5T-gYu" secondAttribute="trailing" id="bCw-T6-18J"/>
                 <constraint firstAttribute="bottom" secondItem="rN8-kA-XpL" secondAttribute="bottom" id="cV3-43-m8G"/>
