--- a/hairista/Controller/DetailSalon/SalonDetail/ImageCell/ImageCell.xib
+++ b/hairista/Controller/DetailSalon/SalonDetail/ImageCell/ImageCell.xib
@@ -4,36 +4,51 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Roboto-Regular.ttf">
+            <string>Roboto-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageCell" id="gTV-IL-0wX" customClass="ImageCell">
-            <rect key="frame" x="0.0" y="0.0" width="119" height="110"/>
+            <rect key="frame" x="0.0" y="0.0" width="120" height="179"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="119" height="110"/>
+                <rect key="frame" x="0.0" y="0.0" width="120" height="179"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zEE-2T-5l3">
-                        <rect key="frame" x="0.0" y="0.0" width="119" height="110"/>
+                        <rect key="frame" x="0.0" y="0.0" width="120" height="123"/>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hình của khách hàng" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aLe-k4-PfI">
+                        <rect key="frame" x="6" y="131" width="108" height="40"/>
+                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="15"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="aLe-k4-PfI" firstAttribute="top" secondItem="zEE-2T-5l3" secondAttribute="bottom" constant="8" id="1jP-O8-tKI"/>
                 <constraint firstItem="zEE-2T-5l3" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="5BB-Zo-FZ3"/>
+                <constraint firstAttribute="bottom" secondItem="aLe-k4-PfI" secondAttribute="bottom" constant="8" id="De0-xs-L3Y"/>
                 <constraint firstAttribute="trailing" secondItem="zEE-2T-5l3" secondAttribute="trailing" id="F2e-CY-OuN"/>
-                <constraint firstAttribute="bottom" secondItem="zEE-2T-5l3" secondAttribute="bottom" id="cgd-Pk-k2v"/>
+                <constraint firstItem="aLe-k4-PfI" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="6" id="Uq5-sm-3jy"/>
+                <constraint firstAttribute="trailing" secondItem="aLe-k4-PfI" secondAttribute="trailing" constant="6" id="Zvj-nc-cIg"/>
                 <constraint firstItem="zEE-2T-5l3" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="q0o-YX-c6d"/>
             </constraints>
-            <size key="customSize" width="119" height="110"/>
+            <size key="customSize" width="119" height="179"/>
             <connections>
                 <outlet property="imgView" destination="zEE-2T-5l3" id="m7A-a4-0mf"/>
+                <outlet property="lblImageName" destination="aLe-k4-PfI" id="XUl-Fc-b0x"/>
             </connections>
-            <point key="canvasLocation" x="-268" y="-115"/>
+            <point key="canvasLocation" x="-269" y="-80.5"/>
         </collectionViewCell>
     </objects>
 </document>
