--- a/hairista/Controller/Manager/Booking/ManageListBooking/ManageBookingCell/ManageBookingCell.xib
+++ b/hairista/Controller/Manager/Booking/ManageListBooking/ManageBookingCell/ManageBookingCell.xib
@@ -22,15 +22,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ManageBookingCell" rowHeight="119" id="KGk-i7-Jjw" customClass="ManageBookingCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="119"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ManageBookingCell" rowHeight="141" id="KGk-i7-Jjw" customClass="ManageBookingCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="141"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="118.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="140.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_avatar" translatesAutoresizingMaskIntoConstraints="NO" id="k1Z-SC-YYK">
-                        <rect key="frame" x="8" y="48" width="54" height="54"/>
+                        <rect key="frame" x="20" y="60" width="54" height="54"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="54" id="RNE-6x-Fqq"/>
                             <constraint firstAttribute="width" constant="54" id="Vgh-d0-R7S"/>
@@ -42,7 +42,7 @@
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Võ Nguyên Đông" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="npw-1H-Bza">
-                        <rect key="frame" x="73" y="48" width="239" height="21"/>
+                        <rect key="frame" x="85" y="60" width="169" height="28"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="0nA-0F-Gvj"/>
                         </constraints>
@@ -50,17 +50,17 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v5z-IV-gjj">
-                        <rect key="frame" x="73" y="76" width="239" height="26"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100,000 đ" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v5z-IV-gjj">
+                        <rect key="frame" x="85" y="95" width="169" height="26"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="26" id="kxa-La-u83"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
-                        <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="textColor" red="1" green="0.31328328700000002" blue="0.16705806510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thứ 2, 11/05/2017 9:30" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F57-6g-4B4">
-                        <rect key="frame" x="8" y="8" width="210" height="26"/>
+                        <rect key="frame" x="8" y="20" width="210" height="26"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="26" id="XIv-9H-5Np"/>
                             <constraint firstAttribute="width" constant="210" id="eSn-55-iaF"/>
@@ -70,7 +70,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0932188608" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sTZ-kK-h5L">
-                        <rect key="frame" x="221" y="10" width="91" height="21"/>
+                        <rect key="frame" x="221" y="20" width="91" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="3hr-rO-gNW"/>
                             <constraint firstAttribute="width" constant="91" id="tmr-ra-ZB6"/>
@@ -80,43 +80,54 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1f3-JS-mNP">
-                        <rect key="frame" x="8" y="118" width="312" height="0.5"/>
+                        <rect key="frame" x="8" y="140" width="312" height="0.5"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="0.5" id="0fU-t2-je9"/>
                         </constraints>
                     </view>
+                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_checked_booking" translatesAutoresizingMaskIntoConstraints="NO" id="Dkg-m4-w4y">
+                        <rect key="frame" x="262" y="64" width="50" height="50"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="50" id="0Hp-KK-q7P"/>
+                            <constraint firstAttribute="width" constant="50" id="JPg-v8-cx1"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="npw-1H-Bza" firstAttribute="leading" secondItem="k1Z-SC-YYK" secondAttribute="trailing" constant="11" id="3fT-rZ-EAr"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="v5z-IV-gjj" secondAttribute="bottom" priority="750" constant="8.5" id="4Qq-DE-m6T"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="v5z-IV-gjj" secondAttribute="bottom" priority="750" constant="12" id="4Qq-DE-m6T"/>
                     <constraint firstItem="v5z-IV-gjj" firstAttribute="leading" secondItem="k1Z-SC-YYK" secondAttribute="trailing" constant="11" id="6oW-hB-R3G"/>
                     <constraint firstItem="F57-6g-4B4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="9T4-7C-CQb"/>
                     <constraint firstItem="sTZ-kK-h5L" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="GcR-gW-jQ4"/>
                     <constraint firstItem="k1Z-SC-YYK" firstAttribute="top" secondItem="F57-6g-4B4" secondAttribute="bottom" constant="14" id="Ler-Xw-15L"/>
                     <constraint firstItem="v5z-IV-gjj" firstAttribute="top" secondItem="npw-1H-Bza" secondAttribute="bottom" constant="7" id="NQS-X6-QaD"/>
-                    <constraint firstItem="sTZ-kK-h5L" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="2" id="RRP-rS-y49"/>
+                    <constraint firstItem="sTZ-kK-h5L" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="12" id="RRP-rS-y49"/>
+                    <constraint firstItem="Dkg-m4-w4y" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="ULa-JP-QFS"/>
                     <constraint firstItem="npw-1H-Bza" firstAttribute="top" secondItem="F57-6g-4B4" secondAttribute="bottom" constant="14" id="VAX-Af-al1"/>
+                    <constraint firstItem="Dkg-m4-w4y" firstAttribute="top" secondItem="sTZ-kK-h5L" secondAttribute="bottom" constant="23" id="Wv3-KM-ySI"/>
                     <constraint firstAttribute="trailing" secondItem="1f3-JS-mNP" secondAttribute="trailing" id="aBB-fH-mPe"/>
                     <constraint firstItem="1f3-JS-mNP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="aZR-25-gkk"/>
                     <constraint firstAttribute="bottom" secondItem="1f3-JS-mNP" secondAttribute="bottom" id="dyt-kQ-8Fh"/>
-                    <constraint firstItem="k1Z-SC-YYK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="pT8-VH-KoL"/>
-                    <constraint firstItem="npw-1H-Bza" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="uEa-YY-3FZ"/>
-                    <constraint firstItem="F57-6g-4B4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="wcf-zl-5bL"/>
-                    <constraint firstItem="v5z-IV-gjj" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="zDR-N7-PPr"/>
+                    <constraint firstItem="k1Z-SC-YYK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="pT8-VH-KoL"/>
+                    <constraint firstItem="Dkg-m4-w4y" firstAttribute="leading" secondItem="npw-1H-Bza" secondAttribute="trailing" constant="8" id="rsx-Ha-wLY"/>
+                    <constraint firstItem="Dkg-m4-w4y" firstAttribute="leading" secondItem="v5z-IV-gjj" secondAttribute="trailing" constant="8" id="vov-lB-QLZ"/>
+                    <constraint firstItem="F57-6g-4B4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="12" id="wcf-zl-5bL"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="imgStatus" destination="Dkg-m4-w4y" id="oeG-cF-dEn"/>
                 <outlet property="imgViewAvatar" destination="k1Z-SC-YYK" id="loc-c1-45x"/>
                 <outlet property="lblTimeBooking" destination="F57-6g-4B4" id="qfe-6N-XCC"/>
                 <outlet property="lblTotalPrice" destination="v5z-IV-gjj" id="bjB-FB-csy"/>
                 <outlet property="lblUserName" destination="npw-1H-Bza" id="9iX-3x-JqF"/>
                 <outlet property="lblUserPhone" destination="sTZ-kK-h5L" id="Q3E-TY-Sed"/>
             </connections>
-            <point key="canvasLocation" x="-20" y="-131.5"/>
+            <point key="canvasLocation" x="-20" y="-120.5"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="bg_avatar" width="183" height="193"/>
+        <image name="ic_checked_booking" width="50" height="50"/>
     </resources>
 </document>
